--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,50 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-searchbar class="custom" color="secondary" slot="start"></ion-searchbar>
+    <ion-icon name="bag-outline" slot="end" ></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-list>
+    <ion-item>
+      <ion-label>Perro</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Gatos</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Cocodrilos</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Reptiles</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Osos</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Araña</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Serpiente</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Piton Bola</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Pikachu</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Venom</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>Cucaracha</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
